force-app/main/default/objects/Parcel__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gets Details from Sender</description>
    <label>Sender</label>
    <referenceTo>Sender__c</referenceTo>
    <relationshipLabel>Parcels</relationshipLabel>
    <relationshipName>Parcels</relationshipName>
    <type>Lookup</type>
</CustomField>