force-app/main/default/objects/Parcel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parcel_ID__c</columns>
    <columns>Status__c</columns>
    <columns>Weight__c</columns>
    <columns>Estimated_Delivery_Date__c</columns>
    <columns>Sender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>